--- a/homeworks/igor.doroshenko_igordordev/6-adaptive/style.css
+++ b/homeworks/igor.doroshenko_igordordev/6-adaptive/style.css
@@ -41,7 +41,7 @@ body {
 
 .informarion__phone::before {
   content: "";
-  background-image: url(img/icon-phone.svg);
+  background-image: url('img/icon-phone.svg');
   background-size: cover;
   height: 16px;
   width: 12px;
@@ -75,7 +75,7 @@ body {
 
 .information__language-block::before {
   content: "";
-  background-image: url(img/icon-planet.svg);
+  background-image: url('img/icon-planet.svg');
   background-size: cover;
   height: 18px;
   width: 19px;
@@ -88,7 +88,7 @@ body {
   height: 40px;
   vertical-align: middle;
   appearance: none;
-  background-color: white;
+  background-color: #FFF;
   border-style: hidden;
   font-size: 16px;
   font-weight: 500;
@@ -158,7 +158,7 @@ body {
 }
 
 .tracking-form__apply-button:hover {
-  background-color: #ffc400;
+  background-color: #FFC400;
 }
 
 .track-section__delivery-img {
@@ -204,7 +204,7 @@ body {
   width: 370px;
   height: 260px;
   margin: 5px;
-  padding: 35px 24px 25px 24px;
+  padding: 35px 24px 25px;
   border-radius: 15px;
 }
 
@@ -343,13 +343,13 @@ body {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  color: #666666;
+  color: #666;
   padding: 0 3px;
 }
 
 .article-attributes__view-count::before {
   content: "";
-  background-image: url(img/icon-view.svg);
+  background-image: url('img/icon-view.svg');
   background-size: cover;
   height: 13px;
   width: 19px;
@@ -372,7 +372,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  color: #666666;
+  color: #666;
 }
 
 .article-short__full-link {
@@ -390,7 +390,7 @@ body {
 
 .article-short__full-link::after {
   content: "";
-  background-image: url(img/icon-arrow2.svg);
+  background-image: url('img/icon-arrow.svg');
   background-size: cover;
   height: 18px;
   width: 18px;
@@ -454,7 +454,6 @@ body {
 .contacts__social {
   list-style: none;
   display: flex;
-
 }
 
 .social__element {
