--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/style.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/style.css
@@ -119,7 +119,6 @@ html, body {
   width: 350px;
   border-radius: 30px 0 0 30px;
   font-size: inherit;
-  color: #BABABA;
 }
 
 .search-parcel__input:focus,
@@ -130,10 +129,11 @@ html, body {
 .search-parcel__input[type="text"] {
   padding-left: 39px;
   border: none;
+  color: inherit;
 }
 
 .search-parcel__button {
-  height: 65px;
+  height: 62px;
   width: 170px;
   border-radius: 0 30px 30px 0;
   background-color: #FF6A00;
@@ -281,6 +281,7 @@ html, body {
 }
 
 .content-row__image-meta {
+  color: #666;
   margin-top: 10px;
   width: 100%;
   justify-content: space-between;
@@ -302,6 +303,7 @@ html, body {
   position: relative;
   right: 130px;
 }
+
 
 .section-clients {
   margin: 70px 150px;
@@ -328,16 +330,15 @@ html, body {
 
 .footer__information {
   width: 100%;
-  margin: 0 280px;
   padding-top: 25px;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .footer__contact {
-  width: 50%;
+  justify-content: center;
+  padding-left: 10%;
   max-width: 320px;
-  margin-right: 40px;
 }
 
 .contact__text {
@@ -413,23 +414,31 @@ html, body {
 
 .phone__link:hover,
 .phone__link:focus,
-.social__link:hover,
-.social__link:focus,
 .footer__link:hover,
 .footer__link:focus {
-  border-bottom: 5px solid rgb(252, 5, 5);
-  border-radius: 2px;
+  background-color: #EFC8C8;
+  border-radius: 5px;
   transition-duration: 300ms;
 }
 
 .news__link:hover,
 .news__link:focus {
-  border-bottom: 5px solid rgb(9, 204, 241);
-  border-radius: 3px;
+  background-color: #E8F5F6;
+  border-radius: 10px;
   transition-duration: 200ms;
 }
 
-.header__button-language:hover {
-  background-color: #CDCAD7;
+.header__button-language:hover,
+.client-logo__link:hover,
+.client-logo__link:focus {
+  background-color: #E2E0E8;
   border-radius: 10px;
+}
+
+.social__link:hover,
+.social__link:focus {
+  padding-top: 21px;
+  background-color: #F5CDCD;
+  border-radius: 50%;
+  transition-duration: 200ms;
 }
